# MultiwireProportionalChamber

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Python/: SimulationAnalysis.ipynb
include/: CustomContainers.hh  CustomContainers.hpp  Linkdef.hpp  Utility.hh  Utility.hpp
lib/: libCustomContainers_rdict.pcm
src/: generate_gas.cc  generate_gas.cpp  mwpc.cc  mwpc.cpp  view_field.cc  view_field.cpp
